# telephony-dashboard

./: .gitignore  README.md  dashboard_telefonia.md  docker-compose.yml  estrutura_pastas
backend/: .dockerignore  Dockerfile  dev-requirements.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 22fdfcebc1e1_create_initial_tables_for_users_and_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  calls.py  metrics.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  crud_call.py  crud_user.py
backend/app/db/: base.py  db_migrator.py  session.py
backend/app/models/: call.py  user.py
backend/app/schemas/: __init__.py  call.py  metrics.py  user.py
backend/app/scripts/: create_superuser.py
backend/app/services/: call_service.py  metrics_service.py
backend/app/tests/: conftest.py
backend/app/tests/tests_api/v1/: test_auth.py  test_calls.py  test_metrics.py  test_users.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: authService.ts  client.ts  dashboardService.ts
frontend/src/components/: KpiCard.tsx  ProtectedRoute.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/router/: AppRouter.tsx
frontend/src/store/: authStore.ts  dashboardStore.ts
frontend/src/types/: auth.ts  calls.ts  metrics.ts
